# ria-jit

./: .gitignore  .gitlab-ci.yml  .gitmodules  CHANGELOG.md  CMakeLists.txt  README.md  version.cmake
.github/workflows/: ci.yml
documentation/analysis/: fp-register-usage.xlsx  register-usage.xlsx
documentation/expo/: expo.tex  tumlang.sty  tumuser.sty
documentation/final/: 1F-Introduction.tex  2F-Approach.tex  3F-ResultsPerf.tex  final.tex  tum-presentation.cls  tum-user.sty  tumauthblk.sty  tumbase.sty  tumbeamer.cls  tumboxes.sty  tumcaptions.sty  tumcolors.sty  tumfonts.sty  tumlogo.sty  tumpage.sty
documentation/final/diagrams/: chaining-chained.drawio  chaining-unchained.drawio
documentation/gzip/: gzip.xlsx
documentation/meetings/: 2020-04-28.txt  2020-05-21.txt  2020-05-25.txt
documentation/other-performance/: gzip.xlsx  sort.xlsx  ~$gzip.xlsx
documentation/paper/: 1-Introduction.tex  2-Approach.tex  2-Background.tex  3-Approach.tex  3-Implementation.tex  4-Implementation.tex  4-ResultsPerf.tex  5-ResultsPerf.tex  6-Summary.tex  A-Appendix.tex  Makefile.txt  aspdoc.cls  csvConv.py  paper.bib  paper.tex
documentation/paper/benchmarks/: csvConv.py
documentation/paper/benchmarks/register-frequency/: freq.csv
documentation/paper/benchmarks/spec-base/: dbt.csv  qemu.csv
documentation/paper/benchmarks/spec-compare/: no-fusion.csv  none.csv  (+1 more)
documentation/paper/media/: chaining-chained.drawio  chaining-unchained.drawio  components.drawio  strategy.drawio
documentation/spec/: RISC-V-dbt.cfg  RISC-V-qemu.cfg
documentation/spec/config/: RISC-V-dbt.cfg  RISC-V-dbt_no-fusion.cfg  RISC-V-dbt_no-jump-no-ras.cfg  RISC-V-dbt_no-ras.cfg  RISC-V-dbt_none.cfg  RISC-V-float.cfg  RISC-V-perf.cfg  RISC-V-qemu-float.cfg  RISC-V-qemu.cfg  gcc.xml  native.cfg
documentation/spec/exec/: execute-dbt.py  execute-dbt_no-fusion.py  execute-dbt_no-jump-no-ras.py  execute-dbt_no-ras.py  execute-dbt_none.py  execute-float-dbt.py  execute-perf-dbt.py  execute-qemu.py  test-none-optimizations.sh  test-optimizations.sh
documentation/spec/logs/: RISC-V-dbt-025.txt  RISC-V-dbt.txt  RISC-V-qemu-manual-test-exec.txt  RISC-V-qemu-miscompare.txt  RISC-V-qemu.txt  results.xlsx  x264_s-build-fail.txt
documentation/spec/results/: float-results.xlsx  results.xlsx  runs.txt
lib/: common.h  minilibc.c
lib/ryu/: d2fixed.c  d2fixed_full_table.h  d2s_intrinsics.h  digit_table.h  ryu.h  ryucommon.h  source.txt
notes/: 2020-04-30.txt  2020-05-21.txt  Angebot.md
notes/angebot/: angebot.tex
notes/meetings/: transcript.md
references/: ELF-Format.md
src/: blockloader.c  blockloader.h  cache.c  cache.h  emulateEcall.cpp  emulateEcall.hpp  gen.c  gen.h  loadElf.c  loadElf.h  main.c  main.h  parser.c  parser.h  register.c  register.h  translate.cpp  translate.h  translate.hpp  translate_arithmetic.cpp  translate_arithmetic.hpp  translate_controlflow.cpp  translate_controlflow.h  translate_controlflow.hpp  translate_csr.cpp  translate_csr.hpp  translate_loadstore.cpp  translate_loadstore.hpp  translate_m_ext.cpp  translate_m_ext.hpp  translate_other.cpp  translate_other.hpp  util.c  util.h
src/cache/: cache.c  cache.h  return_stack.c  return_stack.h
src/elf/: loadElf.c  loadElf.h
src/env/: exit.c  exit.h  flags.c  flags.h  opt.c  opt.h
src/main/: context.c  context.h  main.c  main.h
src/parser/: parser.c  parser.h
src/runtime/: emulateEcall.c  emulateEcall.cpp  emulateEcall.h  emulateEcall.hpp  manualCSRR.c  manualCSRR.h  perf.c  register.c  register.h
src/util/: analyze.c  analyze.h  log.c  log.h  typedefs.c  typedefs.h  util.h  version.h.in
src/util/tools/: analyze.c  analyze.h  perf.c  perf.h  profile.c  profile.h
test/: assembly_controlflow  assembly_controlflow.S  assembly_hello_world.S  compiled_hello_world  hello_world.c  main.c  test.h  test_cache.cpp  test_hello_world.cpp  test_main.cpp  test_parser.cpp  test_translate_basic.cpp
test/test_programs/: assembly_arithmetic  assembly_controlflow  compiled_hello_world_disassembly.txt  hello_world.c  io_test  io_test.c
test/test_programs/add_test/: Makefile.txt  add_test  main.c
test/test_programs/archive/: assembly_arithmetic.S  assembly_controlflow.S  assembly_hello_world  compiled_hello_world  hello_wordArch  io_test.c
test/test_programs/arithmetic_test/: Makefile.txt  arithm  compiled_test_arithm.c  emulate.sh  rv64minilibc.c  rv64minilibc.h
test/test_programs/benchmarks/: mandelbrot-riscv  mandelbrot.c
test/test_programs/conformance/: dbt.txt  native  native.txt  qemu.txt  risc  tst-ieee754.c
test/test_programs/float_test/: f_arithm_test  f_arithm_test.c  f_arithm_test_stdlib  f_arithm_test_stdlib.c  float_test  float_test.c
test/test_programs/fstat_tests/: test_fstat.c
test/test_programs/gzip_test/: gzip-native
test/test_programs/lazy_replace_example/: lazy_replace  lazy_replace.S  lazy_replace.txt  lazy_replace_paper.txt  no_lazy_replace.txt  no_lazy_replace_paper.txt
test/test_programs/riscvminilib/: rv64minilibc.c  rv64minilibc.h
test/test_programs/sort_example/: Makefile.txt  merge_sort.c  sort
test/unit_tests/: test_amo_ext.cpp  test_arithm.cpp  test_asmjit_ptr.cpp  test_cache.cpp  test_double_arithm.cpp  test_double_con.cpp  test_double_fp_to_gp.cpp  test_double_gp_to_fp.cpp  test_faenc_experiments.cpp  test_float_gp_to_fp.cpp  test_hello_world.cpp  test_loadElf.cpp  test_main.cpp  test_parser.cpp  test_parser_basic.cpp  test_parser_param.cpp  test_register.cpp  test_translate_basic.cpp
test/unit_tests/double_tests/: test_double_arithm.cpp  test_double_con.cpp  test_double_fp_to_gp.cpp  test_double_fused_arithm.cpp  test_double_gp_to_fp.cpp
test/unit_tests/float_double_tests/: test_double_to_float.cpp  test_f_and_d_ext_load_store.cpp  test_f_classd.cpp  test_f_classs.cpp  test_float_to_double.cpp
test/unit_tests/float_tests/: test_f_and_d_ext_load_store.cpp  test_f_class.cpp  test_float_arithm.cpp  test_float_con.cpp  test_float_fp_to_gp.cpp  test_float_fused_arithm.cpp  test_float_gp_to_fp.cpp
test/unit_tests/resources/: all_fd_instr  all_fd_instr.S  all_instr  all_instr.S
(+298 files in other folders)
